--- a/fly.toml
+++ b/fly.toml
@@ -11,7 +11,7 @@ primary_region = 'lhr'
   force_https = true
   auto_stop_machines = true
   auto_start_machines = true
-  min_machines_running = 0
+  min_machines_running = 1
   processes = ['app']
 
 [[vm]]
@@ -19,18 +19,12 @@ primary_region = 'lhr'
   cpu_kind = 'shared'
   cpus = 1
 
-[[services.tcp_checks]]
-  grace_period = "1s"
-  interval = "15s"
-  restart_limit = 0
-  timeout = "2s"
-
-[[services.http_checks]]
-  interval = 10000
+[[http_service.checks]]
+  interval = "2s"
   grace_period = "5s"
-  method = "get"
+  method = "GET"
   path = "/health"
   protocol = "http"
-  timeout = 2000
+  port = 8080
+  timeout = "2s"
   tls_skip_verify = false
-  [services.http_checks.headers]
