CHORE: Create Dependabot config (#22)

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,7 +1,7 @@
 version: 2
 updates:
   # Enable version updates for Go modules
-  - package-ecosystem: "go-mod"
+  - package-ecosystem: "gomod"
     directory: "/"
     schedule:
       interval: "weekly"
