--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,10 +3,10 @@ name: 🐳 Publish Docker
 on:
   workflow_dispatch:
   push:
-    branches: ['main']
-    tags: ['*']
+    branches: ["main"]
+    tags: ["*"]
     paths:
-      - '**.go'
+      - "**.go"
 
 env:
   DH_IMAGE: lissy93/web-check-api
@@ -19,56 +19,56 @@ jobs:
     if: "!contains(github.event.head_commit.message, '[ci-skip]')"
 
     steps:
-    - name: 🛎️ Checkout Repo
-      uses: actions/checkout@v2
+      - name: 🛎️ Checkout Repo
+        uses: actions/checkout@v4
 
-    - name: 🗂️ Make Docker Meta
-      id: meta
-      uses: docker/metadata-action@v3
-      with:
-        images: |
-          ${{ env.DH_IMAGE }}
-          ghcr.io/${{ env.GH_IMAGE }}
-        tags: |
-          type=raw,value=latest,enable={{is_default_branch}}
-          type=ref,event=branch
-          type=ref,event=tag
-        labels: |
-          maintainer=Lissy93
-          org.opencontainers.image.title=Web-Check-API
-          org.opencontainers.image.description=REST API for revealing public data for any website
-          org.opencontainers.image.documentation=https://web-check.xyz
-          org.opencontainers.image.authors=Alicia Sykes
-          org.opencontainers.image.licenses=MIT
+      - name: 🗂️ Make Docker Meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: |
+            ${{ env.DH_IMAGE }}
+            ghcr.io/${{ env.GH_IMAGE }}
+          tags: |
+            type=raw,value=latest,enable={{is_default_branch}}
+            type=ref,event=branch
+            type=ref,event=tag
+          labels: |
+            maintainer=Lissy93
+            org.opencontainers.image.title=Web-Check-API
+            org.opencontainers.image.description=REST API for revealing public data for any website
+            org.opencontainers.image.documentation=https://web-check.xyz
+            org.opencontainers.image.authors=Alicia Sykes
+            org.opencontainers.image.licenses=MIT
 
-    - name: 🔧 Set up QEMU
-      uses: docker/setup-qemu-action@v1
+      - name: 🔧 Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
-    - name: 🔧 Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+      - name: 🔧 Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-    - name: 🔑 Login to DockerHub
-      uses: docker/login-action@v1 
-      with:
-        username: lissy93
-        password: ${{ secrets.DOCKER_HUB_TOKEN }}
+      - name: 🔑 Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: lissy93
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
-    - name: 🔑 Login to GitHub Container Registry
-      uses: docker/login-action@v1 
-      with:
-        registry: ghcr.io
-        username: ${{ github.repository_owner }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+      - name: 🔑 Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: 🚦 Check Registry Status
-      uses: crazy-max/ghaction-docker-status@v1
+      - name: 🚦 Check Registry Status
+        uses: crazy-max/ghaction-docker-status@v1
 
-    - name: ⚒️ Build and push
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        file: ./Dockerfile
-        platforms: linux/amd64,linux/arm64,linux/arm/v7
-        push: true
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
+      - name: ⚒️ Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
